--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,10 +18,10 @@ build:
 requirements:
   host:
     - pip
-    - python !=3.0,!=3.1,!=3.2,!=3.3,!=3.4
-    - poetry
+    - python >=3.6,<4.0
   run:
-    - python !=3.0,!=3.1,!=3.2,!=3.3,!=3.4
+    - python >=3.6,<4.0
+    - termcolor >=1.1.0,<2.0.0
 
 test:
   imports:
