--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ requirements:
   host:
     - pip
     - python >=3.6,<4.0
+    - poetry
   run:
     - python >=3.6,<4.0
     - termcolor >=1.1.0,<2.0.0
